[b]Version 0.5.61[/b] (not released yet):

(2007-09-30)
 * Updated the German translation.
 * Added USE_MULTIPLE_SHORTCUTS in config.h to enable or disable the new
   code for multiple shortcuts (enabled by default).
 * Deleted the actions inc_volume2 and dec_volume2 as now they are not 
   necessary. Their shortcuts are now in increase_volume and decrease_volume.
 * Activated again the new resize code.

(2007-09-28)
 * Now actions can have multiple shortcuts. That means that you can assign
   several keys for the same action. To do this, in the "modify shortcut"
   dialog in the actions editor, disable the "Capture" button and then
   enter the keys names separated by commas. For example: "Space, A" (will
   activate the action when pressed Space or A), "F, Ctrl+F, W" (will 
   activate the action when pressed F or Ctrl+F or W).
   Note 1: the menus (and tooltips) will only show the first shortcut.
   Note 2: the actions editor won't be able to detect conflicts when entered
   shortcuts this way. In case of a conflict (the same key assigned to
   several actions) the key won't work.

(2007-09-27)
 * Updated the Polish translation.

(2007-09-26)
 * Updated the Polish translation.
 * Now if a smplayer.ini is found on the application directory, it will be 
   used to read and save the configuration (unless -ini-path is used).
 * Now -ini-path requires a directory. -ini-path alone will fail and report
   an error.

(2007-09-25)
 * Updated the Hungarian translation.
 * Bugfix: Drag&drop didn't work with *.part files, as the extension
   matched with a subtitle extension (*.rt), so it was tried to be loaded
   as a subtitle.
 * Added help messages for all options in Preferences->General.
 * Updated the Dutch and Polish translations.
 * Added help messages for all options in Preferences->Performance.
 * Added help messages for all options in Preferences->Keyboard and mouse.
 * Updated the Spanish translation.

(2007-09-23)
 * Updated the Romanian translation.